--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,9 @@
     "tests"
   ],
   "dependencies": {
-    "angular-material": "~0.9.8"
+    "angular-material": "~0.9.8",
+    "firebase": "~2.2.7",
+    "angularfire": "~1.1.1",
+    "angular-route": "~1.4.0"
   }
 }
